add_subdirectory(addr)
add_subdirectory(buffer)
add_subdirectory(event)
add_subdirectory(h264)
add_subdirectory(log)
add_subdirectory(media)
add_subdirectory(poller)
add_subdirectory(rtp)
add_subdirectory(rtsp)
add_subdirectory(scheduler)
add_subdirectory(server)
add_subdirectory(session)
add_subdirectory(socket)
add_subdirectory(sync)
add_subdirectory(thread)
add_subdirectory(timer)